--- a/pages/css/task.css
+++ b/pages/css/task.css
@@ -8,11 +8,6 @@ body {
     box-sizing: border-box;
   }
 
-  @font-face {
-    font-family: Raleway-Regular;
-    src: url(../../font/Raleway/Raleway-Regular.ttf);
-  }
-
   ul {
     margin: 0;
     padding: 0;
@@ -82,8 +77,8 @@ body {
   /* Style the header */
   .header {
     background-color: #BFBFFF;
-    padding: 30px 40px;
-    color: white;
+    padding: 20px 40px;
+    color: rgb(49, 49, 49);
     text-align: center;
   }
   
@@ -141,102 +136,26 @@ body {
         
     }
 
-
     /*PAGE DIVISION MULTIPLEXING*/
-  
-  .page ul{
-      list-style: none;
-  }
-  
-  .page-col ul{
-      margin-bottom: 0;
-      padding: 0;
-  
-  }
-  
-  .page-col h4{
-      font-size: 18px;
-      color: black;
-      text-transform: capitalize;
-      margin-bottom: 30px;
-      font-weight: 500;
-      position: relative;
-  }
-  
-  .page-col h4::before{
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: -10px;
-      background-color: rgb(0, 0, 0);
-      height: 2px;
-      box-sizing: border-box;
-      width: 50px;
-  }
-
-  .page-col ul li a{
-      font-size: 16px;
-      text-transform: capitalize;
-      text-decoration: none;
-      font-weight: 300;
-      color: #a3a3a3;
-      display: block;
-  }
-  
-  .page-col a{
-      list-style: none;
-  }
   
   .row{
       display: flex;
-      width: 100%;
+      width: 50%;
       height: 100%;
-  }
-  
-  .page-col{
-      padding: 0 1%;
-  }
-  
-  .page-link {
-      width: fit-content;
-  }
-  
-  .page-link a:hover{
-
-      color: rgb(43, 43, 43);
   }
 
   .main{
-    background-color: #BFBFFF;
+    background-color: #d7d7fd;
     width: 100%;
-    
+    height: 100%;
   }
 
   .sub{
-    padding-right: 20%;
+    padding-right:0%;
     
   }
 
-  .img{
-      margin-top: 0%;
-      padding-top: 30%;
-      width: 65%;
-  }
-/*
-  .user-info p{
-    vertical-align: center;
-    text-align: center;
-  }
-
-  .user-info img{
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-
-  .mail{
-    display: flex;
-  }
-
-  */
-
+h1{
+  font-size: 30px;
+  font-family: 'Times New Roman', Times, serif;
+}
